// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceScreen test empty service screen render 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 100%;
  min-height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  margin-bottom: 0;
}

.c2 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-bottom: 1.4375rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="empty-screen"
    >
      <div
        class="c1"
      >
        <svg
          data-testid="empty-icon"
        />
      </div>
      <div
        class="c2"
      >
        No Data
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceScreen test error service screen render 1`] = `
.c5 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c3 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c3:hover {
  cursor: pointer;
}

.c3 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c3 > div svg {
  margin-right: 0.25rem;
}

.c3 > div {
  color: #FFFFFF;
}

.c3 > div svg {
  fill: #FFFFFF;
}

.c3:hover:enabled {
  background-color: #2F65E0;
}

.c3:disabled {
  background-color: #B3C6F1;
}

.c3:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c4 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 100%;
  min-height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D;
  margin-bottom: 1.4375rem;
}

.c2 {
  margin-top: 4.3125rem;
  width: 15.5rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="error-screen"
    >
      <div
        class="c1"
      >
        Server Error
      </div>
      <div
        class="c2"
      >
        <button
          class="c3"
          data-testid="reload-button"
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c4"
            data-testid="content"
          >
            Reload
          </div>
          <div
            class="c5"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceScreen test loading service screen render 1`] = `
.c2 {
  fill: #4475E3;
  -webkit-animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
  animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 100%;
  min-height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  margin-bottom: 0;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-bottom: 1.4375rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="loading-screen"
    >
      <div
        class="c1"
      >
        <svg
          class="c2"
          data-testid="spinner"
        />
      </div>
      <div
        class="c3"
      >
        No Data
      </div>
    </div>
  </div>
</body>
`;
